@@ -2,6 +2,7 @@ Cacti CHANGELOG
 
 1.2.27
 -issue#5622: Errors and deprecation warnings with PHP 8.3.0
+-issue#5629: auth_changepassword.php cannot return to the refer url by just clicking the "Return" button once
 -issue#5638: Add tooltip info about IPv6 address
 -issue#5648: Fractional time offsets can cause huge webserver error-logs
 -issue#5649: Inapprorpiate use of PHP_OS in lib/ping.php on Windows Platform
